# talent-plan

./: .gitignore  LICENSE  README.md
rust/exercises/meow/: Cargo.toml  README.md
rust/exercises/meow/src/: main.rs
rust/project-1/: Cargo.toml
