[package]
name = "meow"
version = "0.1.0"
authors = ["xiongxin <1781189926@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "env"
path = "bin/env.rs"


[[bin]]
name = "errors"
path = "bin/errors.rs"

[[bin]]
name = "01a_quick_example"
path = "bin/01a_quick_example.rs"


[[bin]]
name = "01b_quick_example"
path = "bin/01b_quick_example.rs"

[dependencies]
clap = { features = ["yaml"] }