[package]
name = "meow"
version = "0.1.0"
authors = ["xiongxin <1781189926@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "env"
path = "bin/env.rs"


[[bin]]
name = "errors"
path = "bin/errors.rs"

[[bin]]
name = "01a_quick_example"
path = "bin/01a_quick_example.rs"


[[bin]]
name = "01b_quick_example"
path = "bin/01b_quick_example.rs"

[[bin]]
name = "01c_quick_example"
path = "bin/01c_quick_example.rs"


[[bin]]
name = "03_args"
path = "bin/03_args.rs"

[[bin]]
name = "04_using_matches"
path = "bin/04_using_matches.rs"

[[bin]]
name = "05_flag_args"
path = "bin/05_flag_args.rs"

[[bin]]
name = "06_positional_args"
path = "bin/06_positional_args.rs"

[[bin]]
name = "07_option_args"
path = "bin/07_option_args.rs"

[dependencies]
clap = { features = ["yaml"] }